<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorGreyLight"
    tools:context=".OrderDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:focusable="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical">

            <TextView
                style="@style/TitleToolbarStyle"
                android:text="@string/orderDetails" />

            <ImageView
                android:id="@+id/imgWalletBack"
                style="@style/BackIconStyle" />
        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar"
        android:layout_margin="@dimen/layoutMarginMap"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgTime"
                style="@style/CardImgStyle1"
                android:layout_alignParentRight="true"
                android:src="@drawable/schedule_orange" />

            <TextView
                android:id="@+id/tvOrderTime"
                style="@style/CardTextStyle1"
                android:layout_toLeftOf="@id/imgTime"
                android:text="12/12/2019, 10:03 pm" />

            <View
                android:id="@+id/v1"
                style="@style/CardLineVerStyle"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:id="@+id/imgWheel"
                style="@style/CardImgStyle1"
                android:layout_toLeftOf="@id/v1"
                android:src="@drawable/wheel_orange" />

            <TextView
                android:id="@+id/tvOrderCarType"
                style="@style/CardTextStyle1"
                android:layout_toLeftOf="@id/imgWheel"
                android:text="Regular XL" />

            <View
                android:id="@+id/v2"
                style="@style/CardLineVerStyle"
                android:layout_toRightOf="@id/tvPrice" />

            <TextView
                android:id="@+id/tvPrice"
                style="@style/CardTextStyle1"
                android:layout_marginRight="@dimen/margin_card_start"
                android:layout_toRightOf="@id/currencyType"
                android:text="5"
                android:textColor="@color/colorGreen"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/currencyType"
                style="@style/CardTextStyle1"
                android:layout_alignBottom="@id/imgWheel"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/margin_card_start"
                android:layout_marginRight="4dp"
                android:text="SR" />

            <View
                android:id="@+id/topHorLine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dividerSize"
                android:layout_below="@id/imgTime"
                android:background="@color/greyDivider" />

            <ImageView
                android:id="@+id/imgFirstPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tvFirstPoint"
                android:layout_alignBottom="@id/tvFirstPoint"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_card_start"
                android:src="@drawable/oval_bordered" />

            <FrameLayout
                android:id="@+id/routeLine"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_above="@id/imgEndPoint"
                android:layout_below="@id/imgFirstPoint"
                android:layout_alignStart="@id/imgFirstPoint"
                android:layout_alignEnd="@id/imgFirstPoint">

                <View
                    android:layout_width="@dimen/dividerSize"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/greyDivider" />
            </FrameLayout>

            <ImageView
                android:id="@+id/imgEndPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tvEndPoint"
                android:layout_alignBottom="@id/tvEndPoint"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_card_start"
                android:src="@drawable/oval_black" />

            <TextView
                android:id="@+id/tvFirstPoint"
                style="@style/CardTextStyle2"
                android:layout_below="@id/topHorLine"
                android:text="شركة كابتن للخدمات اللوجيستية" />

            <ImageView
                android:id="@+id/v_h"
                style="@style/DottedDividerStyle"
                android:layout_below="@id/tvFirstPoint"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_toLeftOf="@id/imgFirstPoint"
                android:src="@drawable/dotted" />

            <TextView
                android:id="@+id/tvEndPoint"
                style="@style/CardTextStyle2"
                android:layout_below="@id/v_h"
                android:layout_marginBottom="@dimen/margin_card_ver"
                android:text="شركة كابتن للخدمات اللوجيستية" />

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tvEndPoint"
                android:layout_alignBottom="@id/tvEndPoint"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/margin_card_start"
                android:gravity="center"
                android:text="40 KM" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layoutTotal"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bg_order_details"
        android:orientation="vertical"
        android:paddingStart="@dimen/orderDetailsMargin"
        android:paddingEnd="@dimen/orderDetailsMargin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="7dp"
            android:text="اسم السائق"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:layout_marginTop="7dp"
            android:gravity="center_vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imgCar"
                android:layout_width="@dimen/smallCircleImg"
                android:layout_height="@dimen/smallCircleImg"
                android:layout_alignTop="@id/layout"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/ic_launcher_round"
                app:riv_border_color="@color/colorPrimary"
                app:riv_border_width="@dimen/dividerSize"
                app:riv_corner_radius="@dimen/smallRadiusImg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="مرسيدس بنز  2016 - أبيض"
                android:textColor="#7E7E7E" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="horizontal">

            <TextView
                style="@style/OrderDetailsTextStyle"
                android:text="@string/driveDuration" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minute"
                android:textColor="@color/greyOrderDetails" />

            <TextView
                android:id="@+id/tvDriveDuration"
                style="@style/ValueTextStyle"
                android:text="20" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/orderDetailsMargin"
            android:orientation="horizontal">


            <TextView
                style="@style/OrderDetailsTextStyle"
                android:text="@string/crossedDistance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kiloMeter"
                android:textColor="@color/greyOrderDetails" />

            <TextView
                android:id="@+id/tvCrossedDistance"
                style="@style/ValueTextStyle"
                android:text="11" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dividerSize"
            android:layout_marginTop="@dimen/orderDetailsMargin"
            android:background="#0F707070" />

        <LinearLayout
            style="@style/ItemOrderDetailsStyle"
            android:layout_marginTop="22dp">

            <TextView
                style="@style/OrderDetailsTextStyle"
                android:text="@string/MinimumWage" />

            <TextView
                style="@style/UnitOrderDetailsStyle"
                android:text="@string/saudiRial" />

            <TextView
                android:id="@+id/tvMinWage"
                style="@style/ValueTextStyle"
                android:text="11" />

        </LinearLayout>

        <LinearLayout style="@style/ItemOrderDetailsStyle">

            <TextView
                style="@style/OrderDetailsTextStyle"
                android:text="@string/MainPrice" />

            <TextView
                style="@style/UnitOrderDetailsStyle"
                android:text="@string/saudiRial" />

            <TextView
                android:id="@+id/tvMainPrice"
                style="@style/ValueTextStyle"
                android:text="11" />

        </LinearLayout>

        <LinearLayout style="@style/ItemOrderDetailsStyle">

            <TextView
                style="@style/OrderDetailsTextStyle"
                android:text="@string/BokkingFees" />

            <TextView
                style="@style/UnitOrderDetailsStyle"
                android:text="@string/saudiRial" />

            <TextView
                android:id="@+id/tvBookingFee"
                style="@style/ValueTextStyle"
                android:text="11" />

        </LinearLayout>

        <LinearLayout
            style="@style/ItemOrderDetailsStyle"
            android:layout_marginBottom="@dimen/orderDetailsMargin">

            <TextView
                style="@style/OrderDetailsTextStyle"
                android:text="@string/taxiService" />

            <TextView
                style="@style/UnitOrderDetailsStyle"
                android:text="@string/saudiRial" />

            <TextView
                android:id="@+id/tvTaxiService"
                style="@style/ValueTextStyle"
                android:text="11" />

        </LinearLayout>
    </LinearLayout>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imgDriver"
        android:layout_width="@dimen/bigCircleImg"
        android:layout_height="@dimen/bigCircleImg"
        android:layout_below="@id/view"
        android:layout_marginStart="14dp"
        android:src="@mipmap/ic_launcher_round"
        app:riv_border_color="@color/colorPrimary"
        app:riv_border_width="@dimen/dividerSize"
        app:riv_corner_radius="@dimen/bigRadiusImg" />

    <LinearLayout
        android:id="@+id/layoutTotal"
        style="@style/ValueTextStyle"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/colorGreyLight"
        android:padding="@dimen/orderDetailsMargin">

        <TextView
            style="@style/OrderDetailsTextStyle"
            android:text="@string/totalDrivePrice"
            android:textStyle="bold" />

        <TextView
            style="@style/UnitOrderDetailsStyle"
            android:text="@string/saudiRial"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTotalPrice"
            style="@style/ValueTextStyle"
            android:text="300"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>


